--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,92 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
 body {
-    width: 50dvw;
+    width: 70dvw;
     margin: auto;
+    background-color: rgb(75, 75, 75);
 }
 
-/* h1, h2, h3, h4 {
-    margin: 1rem;
+h1, h2, h3, h4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    /* text-shadow: 0px 0 10px #00000040; */
+    text-shadow:  1px 1px 4px #bdbdbd,
+                 -1px -1px 4px #ffffff;
+}
+
+h2 {
+    margin-left: 0.5rem;
+}
+
+h3 {
+    margin-left: 1rem;
+}
+
+h4 {
+    margin-left: 1.5rem;
 }
 
 p {
-    margin: 1.2rem;
-} */
+    margin: 1rem;
+}
+
+.title {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    color: white;
+    text-shadow: none;
+}
+
+.block {
+    margin-bottom: 5rem;
+    padding: 3rem 10vw 3rem 10vw;
+    border-radius: 50px;
+    background: #f1f1f1;
+    box-shadow:  20px 20px 60px #d0d0d0,
+                 -20px -20px 60px #ffffff8f;
+}
+
+
+
+table {
+    margin: auto;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    border-radius: 20px;
+    border: 1px solid black;
+    border-spacing: 1rem;
+    box-shadow: 20px 20px 60px #d0d0d0,
+    -20px -20px 60px #ffffff;;
+
+    & p {
+        padding: 5px;
+        margin: 0px;
+    }
+
+    & th {
+        text-align: left;
+    }
+}
+
+table {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: auto;
+}
+
+/* For tables with content that might overflow */
+table, th, td {
+    word-wrap: break-word;
+    white-space: nowrap; /* Optional: adjust this to wrap text if needed */
+}
+
+@media (max-width: 768px) {
+    table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+        padding: 0 1rem;
+    }
+}
