--- a/styles.css
+++ b/styles.css
@@ -109,12 +109,12 @@ nav {
 
     & ul {
         list-style: none; 
-        border: 1px solid lime;
+        /* border: 1px solid lime; */
         width: 100%;
         margin: auto;
         
         & li {
-            border: 1px solid yellow;
+            /* border: 1px solid yellow; */
             padding: 1rem;
             text-align: center;
             width: 100%;
